# Jeopardy

./: .gitignore  CLAUDE.md  PROJECT_CONTEXT.md  app_state.py  board_loader.py  build_web.py  lobby_store.py  main.py  pyproject.toml  serve_build.py  start.py
boards/beispiel/: board.json
models/: models.py
tests/: test_app_state.py  test_board_loader.py  test_lobby_store.py
ui/: layout.py
views/: __init__.py  board.py  board_editor.py  board_grid.py  host_setup.py  join.py  lobby.py  menu.py  player_view.py  question.py  router.py  topbar.py
views/components/: player_card.py
